--- a/force-app/main/default/classes/MarksAdopterWarning.cls
+++ b/force-app/main/default/classes/MarksAdopterWarning.cls
@@ -1,17 +1,20 @@
 public with sharing class MarksAdopterWarning {
-    public static List<Adoption__c> adoptionFilter(List<Adoption__c> listAdp) {
+    
+    //Filters the adoptions that are Red flagged
+    public static List<Adoption__c> adoptionFilter(List<Adoption__c> listAdp, String flag) {
         
         List<Adoption__c> filteredAdoptions = new List<Adoption__c>();
         
         for (Adoption__c adp : listAdp){
-            if (adp.flag__c == 'Red'){
+            if (adp.flag__c == flag){
                 filteredAdoptions.add(adp);
             }
         }    
         return filteredAdoptions;            
     }
     
-    public static void marksAdopterWarning(List<Adoption__c> listAdp){
+    // Updates the Warning field on the Adopter object according to the Adoption Stage
+    public static void marksAdopterWarning(List<Adoption__c> listAdp, boolean flag){
         
         List<Id> adoptersIds = new List<Id>();
 
@@ -23,16 +26,18 @@ public with sharing class MarksAdopterWarning {
         List<Adopter__c> adoptersToUpdate = new List<Adopter__c>();
 
         for (Adopter__c adopter : adoptersList){
-            adopter.Warning__c = true;
+            adopter.Warning__c = flag;
             adoptersToUpdate.add(adopter);
         }
         
         update adoptersToUpdate;
     }
 
-    public static void run(List<Adoption__c> listAdp){
-        List<Adoption__c> runAdoptions = adoptionFilter(listAdp);
-        marksAdopterWarning(runAdoptions);
+    // Runs the class
+    public static void run(List<Adoption__c> listAdp, String filter, boolean flag){
+
+        List<Adoption__c> runAdoptions = adoptionFilter(listAdp, filter);
+        marksAdopterWarning(runAdoptions, flag);
     }
 
 }
